New search function in editor, some bugfixes. More javadoc comments in Java source files.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13726 91430c5f-d668-0410-9e7d-dd663366dcfd